# test-flask-poetry

./: README.md  pyproject.toml
myapp/: main.py
