[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Danyan <jnadiko7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "myapp.main:start"